--- a/login_page_template.html
+++ b/login_page_template.html
@@ -129,7 +129,7 @@
             <div class="w-full max-w-md">
                 <div class="bg-white rounded-2xl shadow-2xl overflow-hidden">
                     <div class="bg-[#4a7c82] p-8 text-center">
-                        <img src="https://raw.githubusercontent.com/user-attachments/assets/56678ed9-9093-4b6e-8913-2072f4476a16" alt="Logo" class="h-16 w-16 mx-auto mb-4" />
+                        <img src="https://i.postimg.cc/26dHxmnV/89307731ad9526cb7f84-1-Photoroom.png" alt="Logo" class="h-16 w-16 mx-auto mb-4" />
                         <h2 class="text-2xl font-bold text-white">QUẢN LÝ THIẾT BỊ Y TẾ</h2>
                         <p class="text-white/80 text-sm mt-1">Đăng nhập vào hệ thống</p>
                     </div>
